PO-5762: Added 'V2' versions of permission retalted classes.